Began Network Concepts Section
Started explaining the network protocols that played a part in the creation of the website.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h1>Welcome to our project website</h1>
         <p>Members: San, John, Joseph, Nathan</p>
     </div>
+    <section class = "Networking Concepts">
+        <h1>Networking Concepts Used in the Creation of this Website</h1>
+        <ul>
+            <li>The domain github.io uses DNS to translate the website name into an IP address.</li>
+            <li>IP provides a unique address to the server that our website is hosted on to allow clients to identify and connect to it.</li>
+            <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between client and server.</li>
+        </ul>
+    </section>
+    
 </body>
 </html>
