--- a/index.html
+++ b/index.html
@@ -11,12 +11,21 @@
         <h1>Welcome to our project website</h1>
         <p>Members: San, John, Joseph, Nathan</p>
     </div>
-    <section class = "Networking Concepts">
-        <h1>Networking Concepts Used in the Creation of this Website</h1>
+    <section class = "networking-concepts">
+        <h2><i>Networking Concepts Used in the Creation of this Website</i></h2>
         <ul>
             <li>The domain github.io uses DNS to translate the website name into an IP address.</li>
             <li>IP provides a unique address to the server that our website is hosted on to allow clients to identify and connect to it.</li>
             <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between client and server.</li>
+        </ul>
+    </section>
+
+    <section class = "website-technologies">
+        <h2><i>Technologies Used to Build this Website</i></h2>
+        <ul>
+            <li><b>Github Pages</b> provides free hosting for our website.</li>
+            <li><b>HTML</b> was used to build the foundation of our website.</li>
+            <li><b>CSS</b> was used to help design the visuals and styles of the website.</li>
         </ul>
     </section>
     
