--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CN Special Force</title>
+    <title>CN Special Forces Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>CN Special Forces Project Website</h1>
+    </header>
     <div class="container">
-        <h1>Welcome to our project website</h1>
-        <p>Members: San, John, Joseph, Nathan</p>
+        <h1>Welcome to our website!</h1>
+        <p>Members: San Yi, John Thekveli, Joseph Thekveli, Nathan Bailey</p>
     </div>
     <section class = "networking-concepts">
         <h2><i>Networking Concepts Used in the Creation of this Website</i></h2>
         <ul>
-            <li>The domain github.io uses DNS to translate the website name into an IP address.</li>
+            <li>The domain github.io uses DNS to translate the website URL into an IP address.</li>
             <li>IP provides a unique address to the server that our website is hosted on to allow clients to identify and connect to it.</li>
-            <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between client and server.</li>
+            <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between the client and the server.</li>
         </ul>
     </section>
 
