Image, Style and Writing Update
- Added an image at the top of our webpage
- Altered the font size and margin of several objects
- Made changes to some of the writing in the Networking Concepts section

--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
     <header>
         <h1>CN Special Forces Project Website</h1>
     </header>
+    <img src = "dog_computer.jpg" alt = "Dog using computer image. Credits to cookiethepom on Unsplash." width = "500" height="600">
     <div class="container">
         <h1>Welcome to our website!</h1>
         <p>Members: San Yi, John Thekveli, Joseph Thekveli, Nathan Bailey</p>
     </div>
     <section class = "networking-concepts">
-        <h2><i>Networking Concepts Used in the Creation of this Website</i></h2>
+        <h2><i>Networking Concepts Used in the Creation of This Website</i></h2>
         <ul>
-            <li>The domain github.io uses DNS to translate the website URL into an IP address.</li>
-            <li>IP provides a unique address to the server that our website is hosted on to allow clients to identify and connect to it.</li>
+            <li>Github uses DNS to translate the domain name of our site into an IP address that computers can connect to.</li>
+            <li>The IP address associated with our website is a hosting IP address which belongs the server that is hosting many Github Pages, including our page.</li>
             <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between the client and the server.</li>
         </ul>
     </section>
 
     <section class = "website-technologies">
-        <h2><i>Technologies Used to Build this Website</i></h2>
+        <h2><i>Technologies Used to Build This Website</i></h2>
         <ul>
             <li><b>Github Pages</b> provides free hosting for our website.</li>
             <li><b>HTML</b> was used to build the foundation of our website.</li>
