--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>CN Special Forces Project Website</h1>
     </header>
-    <img src = "dog_computer.jpg" alt = "Dog using computer image. Credits to cookiethepom on Unsplash." width = "500" height="600">
+    <img src = "dog_computer.jpg" alt = "Dog using computer image. Credits to cookiethepom on Unsplash." width = "200" height="300">
     <div class="container">
         <h1>Welcome to our website!</h1>
         <p>Members: San Yi, John Thekveli, Joseph Thekveli, Nathan Bailey</p>
@@ -18,9 +18,9 @@
     <section class = "networking-concepts">
         <h2><i>Networking Concepts Used in the Creation of This Website</i></h2>
         <ul>
-            <li>Github uses DNS to translate the domain name of our site into an IP address that computers can connect to.</li>
-            <li>The IP address associated with our website is a hosting IP address which belongs the server that is hosting many Github Pages, including our page.</li>
-            <li>Our website uses the HTTPS protocol, which encrypts the messages it sends and ensures secure communication between the client and the server.</li>
+            <li>Github uses <b>DNS</b> to translate the domain name of our site into an IP address that computers can connect to.</li>
+            <li>The <b>IP address associated with our website is a hosting IP address which belongs the server that is hosting many Github Pages, including our page.</li>
+            <li>Our website uses the <b>HTTPS protocol</b>, which encrypts the messages it sends and ensures secure communication between the client and the server.</li>
         </ul>
     </section>
 
