--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CN Special Force</title>
+    <title>CN Special Forces Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>CN Special Forces Project Website</h1>
+    </header>
+    <img src = "dog_computer.jpg" alt = "Dog using computer image. Credits to cookiethepom on Unsplash." width = "300" height="300">
     <div class="container">
-        <h1>Welcome to our project website</h1>
-        <p>Members: San, John, Joseph, Nathan</p>
+        <h1>Welcome to our website!</h1>
+        <p>Members: San Yi, John Thekveli, Joseph Thekveli, Nathan Bailey</p>
     </div>
+    <section class = "networking-concepts">
+        <h2><i>Networking Concepts Used in the Creation of This Website</i></h2>
+        <ul>
+            <li>Github uses <b>DNS</b> to translate the domain name of our site into an IP address that computers can connect to.</li>
+            <li>The IP address associated with our website is a <b>hosting IP address</b> which belongs the server that is hosting many Github Pages, including our page.</li>
+            <li>Our website uses the <b>HTTPS protocol</b>, which encrypts the messages it sends and ensures secure communication between the client and the server.</li>
+        </ul>
+    </section>
+
+    <section class = "website-technologies">
+        <h2><i>Technologies Used to Build This Website</i></h2>
+        <ul>
+            <li><b>Github Pages</b> provides free hosting for our website.</li>
+            <li><b>HTML</b> was used to build the foundation of our website.</li>
+            <li><b>CSS</b> was used to help design the visuals and styles of the website.</li>
+        </ul>
+    </section>
+    
 </body>
 </html>
