--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         gtag('config', 'YOUR_TRACKING_ID');
     </script>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-356F70C6F3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-356F70C6F3');
+</script>
+
 <body>
     <header>
         <h1>CN Special Forces Project Website</h1>
