--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="styles.min.css">
     
     <!-- Security: Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://www.googletagmanager.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://www.google-analytics.com; script-src 'self' https://www.googletagmanager.com;">
     
     <!-- Performance: Google Analytics Integration 
     <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID"></script>
